--- a/templates/home.html
+++ b/templates/home.html
@@ -75,6 +75,61 @@
                 <button class="button">Sepete Ekle</button>
             </form>
         </div>
+                <div class="product">
+            <img src="../static/img/snowspray.jpeg" alt="spray">
+            <h3>Kar spreyi</h3>
+            <p class="price">300 ₺</p>
+            <form action="/sepete_ekle" method="post">
+                <input type="hidden" name="ad" value="Kar spreyi">
+                <input type="hidden" name="fiyat" value="300">
+                <input type="hidden" name="resim" value="snowspray.jpeg">
+                <button class="button">Sepete Ekle</button>
+            </form>
+        </div>
+                <div class="product">
+            <img src="../static/img/yilbasicorabi1.jpeg" alt="yilbasiagaci1">
+            <h3>Yılbaşı Çorabı 4 tane</h3>
+            <p class="price">200 ₺</p>
+            <form action="/sepete_ekle" method="post">
+                <input type="hidden" name="ad" value="Yılbaşı Çorapları 4 tane">
+                <input type="hidden" name="fiyat" value="200">
+                <input type="hidden" name="resim" value="yilbasicorabi1.jpeg">
+                <button class="button">Sepete Ekle</button>
+            </form>
+        </div>
+                <div class="product">
+            <img src="../static/img/yilbasicorabi2.jpeg" alt="yilbasiagaci1">
+            <h3>Yılbaşı Çorapları 4 tane</h3>
+            <p class="price">200 ₺</p>
+            <form action="/sepete_ekle" method="post">
+                <input type="hidden" name="ad" value="Yılbaşı Çorapları 4 tane">
+                <input type="hidden" name="fiyat" value="200">
+                <input type="hidden" name="resim" value="yilbasicorabi2.jpeg">
+                <button class="button">Sepete Ekle</button>
+            </form>
+        </div>
+                <div class="product">
+            <img src="../static/img/yilbasiisigi.jpeg" alt="yilbasiagaci1">
+            <h3>Yılbaşı ışığı süs</h3>
+            <p class="price">678 ₺</p>
+            <form action="/sepete_ekle" method="post">
+                <input type="hidden" name="ad" value="Yılbaşı ışığı süs">
+                <input type="hidden" name="fiyat" value="678">
+                <input type="hidden" name="resim" value="yilbasiisigi.jpeg">
+                <button class="button">Sepete Ekle</button>
+            </form>
+        </div>
+                <div class="product">
+            <img src="../static/img/yilbasiagaci.png" alt="yilbasiagaci1">
+            <h3>simli şerit süsler</h3>
+            <p class="price">70 ₺</p>
+            <form action="/sepete_ekle" method="post">
+                <input type="hidden" name="ad" value="simli şerit süsler">
+                <input type="hidden" name="fiyat" value="70">
+                <input type="hidden" name="resim" value="sus_5.jpeg">
+                <button class="button">Sepete Ekle</button>
+            </form>
+        </div>
     </div>
     <footer class="site-footer">
         <p>
