--- a/templates/plusproject.html
+++ b/templates/plusproject.html
@@ -9,7 +9,7 @@
     <h1 class="baslik">DİĞER PROJELER</h1>
     <div class="note">
         <img src="../static/img/note.jpg" alt="note" class="note-img">
-        <a href="/" class="note-a"></a>
+        <a href="/" class="note-a">Not oluşturucu</a>
     </div>
 </body>
 </html>
