--- a/static/css/decor_plusproject.css
+++ b/static/css/decor_plusproject.css
@@ -4,3 +4,16 @@
     color:antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
 }
+body {
+    background-color: black;
+}
+.note {
+    justify-content: center;
+    align-items: center;
+    border: 1px cyan;
+}
+.note-a {
+    text-decoration: none;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
