--- a/templates/card.html
+++ b/templates/card.html
@@ -7,16 +7,16 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
   >
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <title>Programcının kütüphanesi</title>
 </head>
 <body>
   <header class="header">
-    <img src="../static/img/logo.svg" alt="logo" width="30" height="30">
+    <img src="{{ url_for('static', filename='img/logo.svg') }}" alt="logo" width="30" height="30">
     <ul class="main-list">
         <li class="list__item">
           <a href="">
-            <img src="../static/img/login.svg" alt="login" width="20" height="20">
+            <img src="{{ url_for('static', filename='img/login.svg') }}" alt="login" width="20" height="20">
           </a>
     </ul>
   </header>
