--- a/templates/create_card.html
+++ b/templates/create_card.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programcının kütüphanesi</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <header class="header">
-        <img src="../static/img/logo.svg" alt="logo" width="30" height="30">
+        <img src="{{ url_for('static', filename='img/logo.svg') }}" alt="logo" width="30" height="30">
         <ul class="main-list">
             <li class="list__item">
               <a href="">
-                <img src="../static/img/login.svg" alt="login" width="20" height="20">
+                <img src="{{ url_for('static', filename='img/login.svg') }}" alt="login" width="20" height="20">
               </a>
         </ul>
       </header>
@@ -21,7 +21,7 @@
         {% block content %}
         <form action="{{ url_for('form_create') }}" method="post" class="creat-form">
             <div class="form__card">
-                <img class="card__img" src="../static/img/post_icon.png" width="250" height="250" alt="post_icon">
+                <img class="card__img" src="{{ url_for('static', filename='img/post_icon.png') }}" width="250" height="250" alt="post_icon">
                 <div class="form__inputs">
                     <label for="title">
                         <input class="form__input" type="text" name="title" id="title" placeholder="Kayıt başlığını yazın" required>
