--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <ul class="cards-list">
       {% for el in cards%}
       <li class="card">
-        <a class="card__link" href="/card/{{el.id}}">
+        <a class="card__link" href="/others/note/card/{{el.id}}">
           <img class="card__img" src="../static/img/post_icon.png" width="250" height="250" alt="post_icon">
           <div class="card__text">
             <h2 class="card__title">{{el.title}}</h2>
