--- a/templates/card.html
+++ b/templates/card.html
@@ -31,7 +31,7 @@
       <div class="main__text">
       {{card.text}}
       </div>
-      <a class="main__link" href="/">Kayıtlara geri dön</a>
+      <a class="main__link" href="/others/notes">Kayıtlara geri dön</a>
     </div>
   </main>
   {% endblock %}
